# SlicerNNUnet

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
SlicerNNUnet/: CMakeLists.txt  SlicerNNUNet.py  SlicerNnUNet.py
SlicerNNUnet/Resources/UI/: SlicerNNUNet.ui
SlicerNNUnet/SlicerNNUNetLib/: InstallLogic.py  Parameter.py  SegmentationLogic.py  Widget.py  __init__.py
SlicerNNUnet/SlicerNnUNetLib/: InstallLogic.py  SegmentationLogic.py  Widget.py  __init__.py
SlicerNNUnet/Testing/: InstallLogicTestCase.py  IntegrationTestCase.py  SegmentationLogicTestCase.py  Utils.py  WidgetTestCase.py
kevinsig-docs/: explain-project.md
